# xarray-hydro

./: .gitignore  LICENSE  NOTICE  README.md  prec_mean.py  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
src/xarray_hydro/: hydrological_models.py  val_prec_mean copy.py  watershed_utils.py
tests/: conftest.py  test_get_mean_values.py
